--- a/views/home.html
+++ b/views/home.html
@@ -34,13 +34,13 @@
         <div class="search-box">
           <form action="#" method="POST">
             <input
-            type="text"
-            name="search"
-            id="search"
-            placeholder="Search for anything"
-          /><button type="" class="button-search">
-            <i class="fab fa-searchengin fa-lg"></i>
-          </button>
+              type="text"
+              name="search"
+              id="search"
+              placeholder="Search for anything"
+            /><button type="" class="button-search">
+              <i class="fab fa-searchengin fa-lg"></i>
+            </button>
           </form>
         </div>
         <div class="shoppingCart">
@@ -55,8 +55,12 @@
           <li><a href="#">Centro de información</a></li>
         </ul>
         <ul class="user-options">
-          <li><button>Login</button></li>
-          <li><button>Sign Up</button></li>
+          <li>
+            <a href="">Log in <i class="fas fa-sign-in-alt"></i></a>
+          </li>
+          <li>
+            <a href="">Sign up <i class="fas fa-user-plus"></i></a>
+          </li>
         </ul>
       </nav>
       <div class="container-barMenu">
@@ -79,11 +83,14 @@
             <p class="price">$26,900.00</p>
             <p class="recommendations"><a href="#">Articulos similares</a></p>
           </div>
-          
         </article>
 
         <article class="Item">
-          <img class="itemImage" src="/images/home/RTX3060.jpg" alt="RTX3060" />
+          <img
+            class="itemImage img-short"
+            src="/images/home/RTX3060.jpg"
+            alt="RTX3060"
+          />
           <div class="specifications">
             <h3 class="titleItem">
               MSI Tarjeta de Video NVIDIA GeForce RTX 3060 Gaming X.
@@ -91,7 +98,6 @@
             <p class="price">$18,698.00</p>
             <p class="recommendations"><a href="#">Articulos similares</a></p>
           </div>
-         
         </article>
 
         <article class="Item">
@@ -107,12 +113,11 @@
             <p class="price">$6,449.00</p>
             <p class="recommendations"><a href="#">Articulos similares</a></p>
           </div>
-          
         </article>
 
         <article class="Item">
           <img
-            class="itemImage"
+            class="itemImage img-short"
             src="/images/home/KingstonMemory.jpg"
             alt="RamFuryBeast"
           />
@@ -124,13 +129,11 @@
             <p class="price">$2,239.00</p>
             <p class="recommendations"><a href="#">Articulos similares</a></p>
           </div>
-          
         </article>
       </section>
 
-      <h2 class="titleMain">Productos Destacados:</h2>
+      <h2 class="titleMain">Productos en Promoción:</h2>
       <section class="promotionalProducts">
-        
         <article class="Item">
           <img
             class="itemImage"
@@ -144,12 +147,11 @@
             <p class="discount">-15% ¡$585.00 menos!</p>
             <p class="moreOffers"><a href="#">Otras ofertas similares</a></p>
           </div>
-          
         </article>
 
         <article class="Item">
           <img
-            class="itemImage"
+            class="itemImage img-short"
             src="/images/home/tecladoXzeal.jpg"
             alt="GabineteNZXT"
           />
@@ -160,7 +162,6 @@
             <p class="discount">-10% ¡$75.00 menos!</p>
             <p class="moreOffers"><a href="#">Otras ofertas similares</a></p>
           </div>
-          
         </article>
 
         <article class="Item">
@@ -176,12 +177,11 @@
             <p class="discount">-8% ¡$90.00 menos!</p>
             <p class="moreOffers"><a href="#">Otras ofertas similares</a></p>
           </div>
-          
         </article>
 
         <article class="Item">
           <img
-            class="itemImage"
+            class="itemImage img-short"
             src="/images/home/ramCorsair.jpg"
             alt="RamCorsair"
           />
@@ -192,7 +192,6 @@
             <p class="discount">-20% ¡$180.00 menos!</p>
             <p class="moreOffers"><a href="#">Otras ofertas similares</a></p>
           </div>
-          
         </article>
       </section>
     </main>
@@ -200,32 +199,64 @@
     <footer class="footerContainer">
       <section>
         <article class="footerItem">
-          <h4 class="footerTitle"> Follow Us</h4>
-          <ul>
-            <li> <span class="nameItemfooter">Facebook:</span> <a href="#"><i class="fab fa-facebook fa-3x"></i></a> </li>
-            <li> <span class="nameItemfooter">Twitter:</span> <a href="#"><i class="fab fa-twitter-square fa-3x"></i></a> </li>
-            <li> <span class="nameItemfooter">Instagram:</span><a href="#"><i class="fab fa-instagram-square fa-3x"></i></a> </li>
-            <li> <span class="nameItemfooter">Git-Hub:</span><a href="#"><i class="fab fa-github fa-3x"></i></a> </li>
+          <h4 class="footerTitle">Follow Us</h4>
+          <ul class="follow-us">
+            <li>
+              <a href="#"
+                ><i class="fab fa-facebook fa-2x footer-icon-mobile"></i
+              ></a>
+              <a href="#"
+                ><span class="nameItemfooter"
+                  >Facebook: <i class="fab fa-facebook fa-lg"></i></span
+              ></a>
+            </li>
+            <li>
+              <a href="#"
+                ><i class="fab fa-twitter-square fa-2x footer-icon-mobile"></i
+              ></a>
+              <a href="#"
+                ><span class="nameItemfooter"
+                  >Twitter: <i class="fab fa-twitter-square fa-lg"></i></span
+              ></a>
+            </li>
+            <li>
+              <a href="#"
+                ><i class="fab fa-instagram-square fa-2x footer-icon-mobile"></i
+              ></a>
+              <a href="#"
+                ><span class="nameItemfooter"
+                  >Instagram:
+                  <i class="fab fa-instagram-square fa-lg"></i></span
+              ></a>
+            </li>
+            <li>
+              <a href="#"
+                ><i class="fab fa-github fa-2x footer-icon-mobile"></i
+              ></a>
+              <a href="#"
+                ><span class="nameItemfooter"
+                  >Git-Hub: <i class="fab fa-github fa-lg"></i></span
+              ></a>
+            </li>
           </ul>
         </article>
-    
+
         <article class="footerItem">
-          <h4 class="footerTitle"> Contact Us</h4>
+          <h4 class="footerTitle">Contact Us</h4>
           <ul class="contactFooter">
             <li class="contactFooterItem">Call: +52 55 XX XX XX XX</li>
-            <li class="contactFooterItem"> E-mail: something@someadress.com</li>
+            <li class="contactFooterItem">E-mail: something@someadress.com</li>
           </ul>
         </article>
-    
+
         <article class="footerItem">
           <h4 class="footerTitle">Subscribe to the newsletter.</h4>
           <form class="footerFormMobile" action="#" method="POST">
-            <input type="email" placeholder="something@someadress.com">
+            <input type="email" placeholder="something@someadress.com" />
             <button type="submit">Subscribe</button>
           </form>
         </article>
       </section>
     </footer>
-
   </body>
 </html>
