--- a/views/home.html
+++ b/views/home.html
@@ -56,10 +56,10 @@
         </ul>
         <ul class="user-options">
           <li>
-            <a href="">Log in <i class="fas fa-sign-in-alt"></i></a>
+            <a href="/login">Log in <i class="fas fa-sign-in-alt"></i></a>
           </li>
           <li>
-            <a href="">Sign up <i class="fas fa-user-plus"></i></a>
+            <a href="/register">Sign up <i class="fas fa-user-plus"></i></a>
           </li>
         </ul>
       </nav>
