--- a/views/home.html
+++ b/views/home.html
@@ -1,79 +1,81 @@
 <!DOCTYPE html>
 <html lang="es-mx">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/homeStyles.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Oxygen&family=Roboto+Mono&display=swap"
-      rel="stylesheet"
-    />
-    <script type="text/javascript" src="/js/home.js"></script>
-    <script
-      src="https://kit.fontawesome.com/4233ea3642.js"
-      crossorigin="anonymous"
-    ></script>
-    <title>Welcome to "Tech Land"!</title>
-  </head>
 
-  <body>
-    <header>
-      <div class="header-top">
-        <div class="container-logo">
-          <a href="/home"
-            ><img
-              src="/images/techLand2White.png"
-              class="tech-land-logo"
-              alt="tech-land-logo"
-          /></a>
-        </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/css/home/bodyStyles.css" />
+  <link rel="stylesheet" href="/css/home/navbarStyles.css" />
+  <link rel="stylesheet" href="/css/home/footerStyles.css" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Oxygen&family=Roboto+Mono&display=swap" rel="stylesheet" />
+  <script type="text/javascript" src="/js/home.js"></script>
+  <script src="https://kit.fontawesome.com/4233ea3642.js" crossorigin="anonymous"></script>
+  <title>Welcome to "Tech Land"!</title>
+</head>
 
-        <div class="search-box">
-          <form action="#" method="POST">
-            <input
-              type="text"
-              name="search"
-              id="search"
-              placeholder="Search for anything"
-            /><button type="" class="button-search">
-              <i class="fab fa-searchengin fa-lg"></i>
-            </button>
-          </form>
-        </div>
-        <div class="shoppingCart">
-          <button><i class="fas fa-shopping-cart fa-lg"></i></button>
-        </div>
+<body>
+  <header>
+    <div class="header-top">
+      <div class="container-logo">
+        <a href="/home"><img src="/images/techLand2White.png" class="tech-land-logo" alt="tech-land-logo" /></a>
       </div>
-      <nav class="header-nav">
-        <ul class="service-options">
-          <li><a href="#">Novedades</a></li>
-          <li><a href="#">Productos destacados</a></li>
-          <li><a href="#">Favoritos</a></li>
-          <li><a href="#">Centro de información</a></li>
-        </ul>
-        <ul class="user-options">
-          <li>
-            <a href="/login">Log in <i class="fas fa-sign-in-alt"></i></a>
-          </li>
-          <li>
-            <a href="/register">Sign up <i class="fas fa-user-plus"></i></a>
-          </li>
-        </ul>
-      </nav>
-      <div class="container-barMenu">
-        <i class="fas fa-bars barMenu fa-lg"></i>
-      </div>
-      <div class="banner">
-        <img src="/images/home/banner1.jpg" alt="banner1" />
-      </div>
-    </header>
 
-    <main class="firstContent">
-      <h2 class="titleMain">Productos Destacados:</h2>
-      <section class="featuredProducts">
+      <div class="search-box">
+        <form action="#" method="POST">
+          <input type="text" name="search" id="search" placeholder="Search for anything" required /><button type=""
+            class="button-search">
+            <i class="fab fa-searchengin fa-lg"></i>
+          </button>
+        </form>
+      </div>
+      <div class="shoppingCart">
+        <a href="/productCart"><i class="fas fa-shopping-cart fa-lg"></i></a>
+      </div>
+    </div>
+    <nav class="header-nav">
+      <ul class="service-options">
+        <li><a href="#">Novedades</a></li>
+        <li><a href="#">Productos destacados</a></li>
+        <li><a href="#">Favoritos</a></li>
+        <li><a href="#">Centro de información</a></li>
+      </ul>
+      <ul class="user-options">
+        <li>
+          <a href="/login">Log in <i class="fas fa-sign-in-alt"></i></a>
+        </li>
+        <li>
+          <a href="/register">Sign up <i class="fas fa-user-plus"></i></a>
+        </li>
+        <li>
+          <div class="search-box-mobile">
+            <form action="#" method="POST">
+              <input type="text" name="search" id="search" placeholder="Search for anything" required /><button type=""
+                class="button-search">
+                <i class="fab fa-searchengin fa-lg"></i>
+              </button>
+            </form>
+          </div>
+        </li>
+      </ul>
+      <div class="shoppingCart-mobile">
+        <a href="/productCart"><i class="fas fa-shopping-cart fa-lg"></i></a>
+      </div>
+    </nav>
+    <div class="container-barMenu">
+      <i class="fas fa-bars barMenu fa-lg"></i>
+    </div>
+    <div class="banner">
+      <img src="/images/home/banner1.jpg" alt="banner1" />
+    </div>
+  </header>
+
+  <main class="firstContent">
+    <h2 class="titleMain">Productos Destacados:</h2>
+    <section class="featuredProducts">
+      <a href="/productDetail">
         <article class="Item">
           <img class="itemImage" src="/images/home/i9.jpg" alt="Core-i9" />
           <div class="specifications">
@@ -84,13 +86,11 @@
             <p class="recommendations"><a href="#">Articulos similares</a></p>
           </div>
         </article>
+      </a>
 
+      <a href="/productDetail">
         <article class="Item">
-          <img
-            class="itemImage img-short"
-            src="/images/home/RTX3060.jpg"
-            alt="RTX3060"
-          />
+          <img class="itemImage img-short" src="/images/home/RTX3060.jpg" alt="RTX3060" />
           <div class="specifications">
             <h3 class="titleItem">
               MSI Tarjeta de Video NVIDIA GeForce RTX 3060 Gaming X.
@@ -99,13 +99,11 @@
             <p class="recommendations"><a href="#">Articulos similares</a></p>
           </div>
         </article>
+      </a>
 
+      <a href="/productDetail">
         <article class="Item">
-          <img
-            class="itemImage"
-            src="/images/home/GabineteConquer.jpg"
-            alt=""
-          />
+          <img class="itemImage" src="/images/home/GabineteConquer.jpg" alt="" />
           <div class="specifications">
             <h3 class="titleItem">
               Gabinete Cougar Conquer 2 con Ventana RGB, Full Tower.
@@ -114,13 +112,11 @@
             <p class="recommendations"><a href="#">Articulos similares</a></p>
           </div>
         </article>
+      </a>
 
+      <a href="/productDetail">
         <article class="Item">
-          <img
-            class="itemImage img-short"
-            src="/images/home/KingstonMemory.jpg"
-            alt="RamFuryBeast"
-          />
+          <img class="itemImage img-short" src="/images/home/KingstonMemory.jpg" alt="RamFuryBeast" />
           <div class="specifications">
             <h3 class="titleItem">
               Kit Memoria Ram Kingston FURY Beast DDR4 RGB, 3200MHz, 16GB (2 x
@@ -130,16 +126,15 @@
             <p class="recommendations"><a href="#">Articulos similares</a></p>
           </div>
         </article>
-      </section>
+      </a>
 
-      <h2 class="titleMain">Productos en Promoción:</h2>
+    </section>
+
+    <h2 class="titleMain">Productos en Promoción:</h2>
+    <a href="/productDetail">
       <section class="promotionalProducts">
         <article class="Item">
-          <img
-            class="itemImage"
-            src="/images/home/GabineteNZXT.jpg"
-            alt="GabineteNZXT"
-          />
+          <img class="itemImage" src="/images/home/GabineteNZXT.jpg" alt="GabineteNZXT" />
           <div class="specifications">
             <h3 class="titleItem">
               Gabinete NZXT H510 Elite con Ventana RGB, Midi-Tower.
@@ -148,115 +143,91 @@
             <p class="moreOffers"><a href="#">Otras ofertas similares</a></p>
           </div>
         </article>
+    </a>
 
-        <article class="Item">
-          <img
-            class="itemImage img-short"
-            src="/images/home/tecladoXzeal.jpg"
-            alt="GabineteNZXT"
-          />
-          <div class="specifications">
-            <h3 class="titleItem">
-              Teclado Gamer XZEAL XZ1020, Teclado Mecánico.
-            </h3>
-            <p class="discount">-10% ¡$75.00 menos!</p>
-            <p class="moreOffers"><a href="#">Otras ofertas similares</a></p>
-          </div>
-        </article>
+    <a href="/productDetail">
+      <article class="Item">
+        <img class="itemImage img-short" src="/images/home/tecladoXzeal.jpg" alt="GabineteNZXT" />
+        <div class="specifications">
+          <h3 class="titleItem">
+            Teclado Gamer XZEAL XZ1020, Teclado Mecánico.
+          </h3>
+          <p class="discount">-10% ¡$75.00 menos!</p>
+          <p class="moreOffers"><a href="#">Otras ofertas similares</a></p>
+        </div>
+      </article>
+    </a>
 
-        <article class="Item">
-          <img
-            class="itemImage"
-            src="/images/home/mouseEvga.jpg"
-            alt="GabineteNZXT"
-          />
-          <div class="specifications">
-            <h3 class="titleItem">
-              Gabinete NZXT H510 Elite con Ventana RGB, Midi-Tower
-            </h3>
-            <p class="discount">-8% ¡$90.00 menos!</p>
-            <p class="moreOffers"><a href="#">Otras ofertas similares</a></p>
-          </div>
-        </article>
+    <a href="/productDetail">
+      <article class="Item">
+        <img class="itemImage" src="/images/home/mouseEvga.jpg" alt="GabineteNZXT" />
+        <div class="specifications">
+          <h3 class="titleItem">
+            Gabinete NZXT H510 Elite con Ventana RGB, Midi-Tower
+          </h3>
+          <p class="discount">-8% ¡$90.00 menos!</p>
+          <p class="moreOffers"><a href="#">Otras ofertas similares</a></p>
+        </div>
+      </article>
+    </a>
 
-        <article class="Item">
-          <img
-            class="itemImage img-short"
-            src="/images/home/ramCorsair.jpg"
-            alt="RamCorsair"
-          />
-          <div class="specifications">
-            <h3 class="titleItem">
-              Memoria RAM Corsair Vengeance DDR3, 1600MHz, 8GB.
-            </h3>
-            <p class="discount">-20% ¡$180.00 menos!</p>
-            <p class="moreOffers"><a href="#">Otras ofertas similares</a></p>
-          </div>
-        </article>
-      </section>
-    </main>
+    <a href="/productDetail">
+      <article class="Item">
+        <img class="itemImage img-short" src="/images/home/ramCorsair.jpg" alt="RamCorsair" />
+        <div class="specifications">
+          <h3 class="titleItem">
+            Memoria RAM Corsair Vengeance DDR3, 1600MHz, 8GB.
+          </h3>
+          <p class="discount">-20% ¡$180.00 menos!</p>
+          <p class="moreOffers"><a href="#">Otras ofertas similares</a></p>
+        </div>
+      </article>
+    </a>
+    </section>
+  </main>
 
-    <footer class="footerContainer">
-      <section>
-        <article class="footerItem">
-          <h4 class="footerTitle">Follow Us</h4>
-          <ul class="follow-us">
-            <li>
-              <a href="#"
-                ><i class="fab fa-facebook fa-2x footer-icon-mobile"></i
-              ></a>
-              <a href="#"
-                ><span class="nameItemfooter"
-                  >Facebook: <i class="fab fa-facebook fa-lg"></i></span
-              ></a>
-            </li>
-            <li>
-              <a href="#"
-                ><i class="fab fa-twitter-square fa-2x footer-icon-mobile"></i
-              ></a>
-              <a href="#"
-                ><span class="nameItemfooter"
-                  >Twitter: <i class="fab fa-twitter-square fa-lg"></i></span
-              ></a>
-            </li>
-            <li>
-              <a href="#"
-                ><i class="fab fa-instagram-square fa-2x footer-icon-mobile"></i
-              ></a>
-              <a href="#"
-                ><span class="nameItemfooter"
-                  >Instagram:
-                  <i class="fab fa-instagram-square fa-lg"></i></span
-              ></a>
-            </li>
-            <li>
-              <a href="#"
-                ><i class="fab fa-github fa-2x footer-icon-mobile"></i
-              ></a>
-              <a href="#"
-                ><span class="nameItemfooter"
-                  >Git-Hub: <i class="fab fa-github fa-lg"></i></span
-              ></a>
-            </li>
-          </ul>
-        </article>
+  <footer class="footerContainer">
+    <section>
+      <article class="footerItem">
+        <h4 class="footerTitle">Follow Us</h4>
+        <ul class="follow-us">
+          <li>
+            <a href="#"><i class="fab fa-facebook fa-2x footer-icon-mobile"></i></a>
+            <a href="#"><span class="nameItemfooter">Facebook: <i class="fab fa-facebook fa-lg"></i></span></a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-twitter-square fa-2x footer-icon-mobile"></i></a>
+            <a href="#"><span class="nameItemfooter">Twitter: <i class="fab fa-twitter-square fa-lg"></i></span></a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-instagram-square fa-2x footer-icon-mobile"></i></a>
+            <a href="#"><span class="nameItemfooter">Instagram:
+                <i class="fab fa-instagram-square fa-lg"></i></span></a>
+          </li>
+          <li>
+            <a href="#"><i class="fab fa-github fa-2x footer-icon-mobile"></i></a>
+            <a href="#"><span class="nameItemfooter">Git-Hub: <i class="fab fa-github fa-lg"></i></span></a>
+          </li>
+        </ul>
+      </article>
 
-        <article class="footerItem">
-          <h4 class="footerTitle">Contact Us</h4>
-          <ul class="contactFooter">
-            <li class="contactFooterItem">Call: +52 55 XX XX XX XX</li>
-            <li class="contactFooterItem">E-mail: something@someadress.com</li>
-          </ul>
-        </article>
+      <article class="footerItem">
+        <h4 class="footerTitle">Contact Us</h4>
+        <ul class="contactFooter">
+          <li class="contactFooterItem">Call: +52 55 XX XX XX XX</li>
+          <li class="contactFooterItem">E-mail: something@someadress.com</li>
+        </ul>
+      </article>
 
-        <article class="footerItem">
-          <h4 class="footerTitle">Subscribe to the newsletter.</h4>
-          <form class="footerFormMobile" action="#" method="POST">
-            <input type="email" placeholder="something@someadress.com" />
-            <button type="submit">Subscribe</button>
-          </form>
-        </article>
-      </section>
-    </footer>
-  </body>
+      <article class="footerItem">
+        <h4 class="footerTitle">Subscribe to the newsletter.</h4>
+        <form class="footerFormMobile" action="#" method="POST">
+          <input type="email" placeholder="something@someadress.com" required />
+          <button type="submit">Subscribe</button>
+        </form>
+      </article>
+    </section>
+  </footer>
+</body>
+
 </html>
