--- a/views/productCart.html
+++ b/views/productCart.html
@@ -10,12 +10,73 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/4233ea3642.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/productDetailStyles.css">
+    <link rel="stylesheet" href="/css/home/navbarStyles.css">
+    <link rel="stylesheet" href="/css/home/footerStyles.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oxygen&family=Roboto+Mono&display=swap"
+      rel="stylesheet"
+    />
+    <script type="text/javascript" src="/js/home.js"></script> 
     <link rel="stylesheet" href="/css/productCartStyles.css">
 </head>
 <body>
+    
     <header>
-
+        <div class="header-top">
+          <div class="container-logo">
+            <a href="/home"><img src="/images/techLand2White.png" class="tech-land-logo" alt="tech-land-logo" /></a>
+          </div>
+    
+          <div class="search-box">
+            <form action="#" method="POST">
+              <input type="text" name="search" id="search" placeholder="Search for anything" required /><button type=""
+                class="button-search">
+                <i class="fab fa-searchengin fa-lg"></i>
+              </button>
+            </form>
+          </div>
+          <div class="shoppingCart">
+            <a href="/productCart"><i class="fas fa-shopping-cart fa-lg"></i></a>
+          </div>
+        </div>
+        <nav class="header-nav">
+          <ul class="service-options">
+            <li><a href="#">Novedades</a></li>
+            <li><a href="#">Productos destacados</a></li>
+            <li><a href="#">Favoritos</a></li>
+            <li><a href="#">Centro de información</a></li>
+          </ul>
+          <ul class="user-options">
+            <li>
+              <a href="/login">Log in <i class="fas fa-sign-in-alt"></i></a>
+            </li>
+            <li>
+              <a href="/register">Sign up <i class="fas fa-user-plus"></i></a>
+            </li>
+            <li>
+              <div class="search-box-mobile">
+                <form action="#" method="POST">
+                  <input type="text" name="search" id="search" placeholder="Search for anything" required /><button type=""
+                    class="button-search">
+                    <i class="fab fa-searchengin fa-lg"></i>
+                  </button>
+                </form>
+              </div>
+            </li>
+          </ul>
+          <div class="shoppingCart-mobile">
+            <a href="/productCart"><i class="fas fa-shopping-cart fa-lg"></i></a>
+          </div>
+        </nav>
+        <div class="container-barMenu">
+          <i class="fas fa-bars barMenu fa-lg"></i>
+        </div>
+        <div class="banner">
+          <img src="/images/home/banner1.jpg" alt="banner1" />
+        </div>
     </header>
+
+
     <main>
         <section class="top">
             <h1 class="main-title">
@@ -317,9 +378,47 @@
         </section>
     </main>
     
-    <footer>
-
-
+    <footer class="footerContainer">
+        <section>
+          <article class="footerItem">
+            <h4 class="footerTitle">Follow Us</h4>
+            <ul class="follow-us">
+              <li>
+                <a href="#"><i class="fab fa-facebook fa-2x footer-icon-mobile"></i></a>
+                <a href="#"><span class="nameItemfooter">Facebook: <i class="fab fa-facebook fa-lg"></i></span></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-twitter-square fa-2x footer-icon-mobile"></i></a>
+                <a href="#"><span class="nameItemfooter">Twitter: <i class="fab fa-twitter-square fa-lg"></i></span></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-instagram-square fa-2x footer-icon-mobile"></i></a>
+                <a href="#"><span class="nameItemfooter">Instagram:
+                    <i class="fab fa-instagram-square fa-lg"></i></span></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-github fa-2x footer-icon-mobile"></i></a>
+                <a href="#"><span class="nameItemfooter">Git-Hub: <i class="fab fa-github fa-lg"></i></span></a>
+              </li>
+            </ul>
+          </article>
+    
+          <article class="footerItem">
+            <h4 class="footerTitle">Contact Us</h4>
+            <ul class="contactFooter">
+              <li class="contactFooterItem">Call: +52 55 XX XX XX XX</li>
+              <li class="contactFooterItem">E-mail: something@someadress.com</li>
+            </ul>
+          </article>
+    
+          <article class="footerItem">
+            <h4 class="footerTitle">Subscribe to the newsletter.</h4>
+            <form class="footerFormMobile" action="#" method="POST">
+              <input type="email" placeholder="something@someadress.com" required />
+              <button type="submit">Subscribe</button>
+            </form>
+          </article>
+        </section>
     </footer>
     
 </body>
