--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -8,12 +8,68 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/4233ea3642.js" crossorigin="anonymous"></script>    
+    <script src="https://kit.fontawesome.com/4233ea3642.js" crossorigin="anonymous"></script>  
+    <link rel="stylesheet" href="/css/home/navbarStyles.css">
+    <link rel="stylesheet" href="/css/home/footerStyles.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oxygen&family=Roboto+Mono&display=swap"
+      rel="stylesheet"
+    />
+    <script type="text/javascript" src="/js/home.js"></script>  
     <link rel="stylesheet" href="/css/ProductDetailStyles.css">
     
 </head>
 <body>
-    
+    <header>
+        <div class="header-top">
+          <div class="container-logo">
+            <a href="/home"
+              ><img
+                src="/images/techLand2White.png"
+                class="tech-land-logo"
+                alt="tech-land-logo"
+            /></a>
+          </div>
+  
+          <div class="search-box">
+            <form action="#" method="POST">
+              <input
+                type="text"
+                name="search"
+                id="search"
+                placeholder="Search for anything"
+              /><button type="" class="button-search">
+                <i class="fab fa-searchengin fa-lg"></i>
+              </button>
+            </form>
+          </div>
+          <div class="shoppingCart">
+            <button><i class="fas fa-shopping-cart fa-lg"></i></button>
+          </div>
+        </div>
+        <nav class="header-nav">
+          <ul class="service-options">
+            <li><a href="#">Novedades</a></li>
+            <li><a href="#">Productos destacados</a></li>
+            <li><a href="#">Favoritos</a></li>
+            <li><a href="#">Centro de información</a></li>
+          </ul>
+          <ul class="user-options">
+            <li>
+              <a href="/login">Log in <i class="fas fa-sign-in-alt"></i></a>
+            </li>
+            <li>
+              <a href="/register">Sign up <i class="fas fa-user-plus"></i></a>
+            </li>
+          </ul>
+        </nav>
+        <div class="container-barMenu">
+          <i class="fas fa-bars barMenu fa-lg"></i>
+        </div>
+        <div class="banner">
+          <img src="/images/home/banner1.jpg" alt="banner1" />
+        </div>
+    </header>
 
     <main>
         <section class="main-section-product">
@@ -28,7 +84,7 @@
             <main class="product-card">                
                
                 <div class="image-product">
-              <img src="/images/gabriel-beaudry-5X5dCf4Pp44-unsplash.jpg" alt="product-preview">
+              <img src="/images/home/i9.jpg" alt="product-preview">
                 </div>
                 
                 <div class="product-card-2nd-box">
@@ -211,11 +267,50 @@
         </section>
 
       
-
     </main>
 
-   
-
+    <footer class="footerContainer">
+        <section>
+          <article class="footerItem">
+            <h4 class="footerTitle">Follow Us</h4>
+            <ul class="follow-us">
+              <li>
+                <a href="#"><i class="fab fa-facebook fa-2x footer-icon-mobile"></i></a>
+                <a href="#"><span class="nameItemfooter">Facebook: <i class="fab fa-facebook fa-lg"></i></span></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-twitter-square fa-2x footer-icon-mobile"></i></a>
+                <a href="#"><span class="nameItemfooter">Twitter: <i class="fab fa-twitter-square fa-lg"></i></span></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-instagram-square fa-2x footer-icon-mobile"></i></a>
+                <a href="#"><span class="nameItemfooter">Instagram:
+                    <i class="fab fa-instagram-square fa-lg"></i></span></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-github fa-2x footer-icon-mobile"></i></a>
+                <a href="#"><span class="nameItemfooter">Git-Hub: <i class="fab fa-github fa-lg"></i></span></a>
+              </li>
+            </ul>
+          </article>
+    
+          <article class="footerItem">
+            <h4 class="footerTitle">Contact Us</h4>
+            <ul class="contactFooter">
+              <li class="contactFooterItem">Call: +52 55 XX XX XX XX</li>
+              <li class="contactFooterItem">E-mail: something@someadress.com</li>
+            </ul>
+          </article>
+    
+          <article class="footerItem">
+            <h4 class="footerTitle">Subscribe to the newsletter.</h4>
+            <form class="footerFormMobile" action="#" method="POST">
+              <input type="email" placeholder="something@someadress.com" required />
+              <button type="submit">Subscribe</button>
+            </form>
+          </article>
+        </section>
+    </footer>
     
 </body>
 </html>
