--- a/views/productDetail.html
+++ b/views/productDetail.html
@@ -20,56 +20,60 @@
     
 </head>
 <body>
-    <header>
-        <div class="header-top">
-          <div class="container-logo">
-            <a href="/home"
-              ><img
-                src="/images/techLand2White.png"
-                class="tech-land-logo"
-                alt="tech-land-logo"
-            /></a>
-          </div>
-  
-          <div class="search-box">
+  <header>
+    <div class="header-top">
+      <div class="container-logo">
+        <a href="/home"><img src="/images/techLand2White.png" class="tech-land-logo" alt="tech-land-logo" /></a>
+      </div>
+
+      <div class="search-box">
+        <form action="#" method="POST">
+          <input type="text" name="search" id="search" placeholder="Search for anything" required /><button type=""
+            class="button-search">
+            <i class="fab fa-searchengin fa-lg"></i>
+          </button>
+        </form>
+      </div>
+      <div class="shoppingCart">
+        <a href="/productCart"><i class="fas fa-shopping-cart fa-lg"></i></a>
+      </div>
+    </div>
+    <nav class="header-nav">
+      <ul class="service-options">
+        <li><a href="#">Novedades</a></li>
+        <li><a href="#">Productos destacados</a></li>
+        <li><a href="#">Favoritos</a></li>
+        <li><a href="#">Centro de información</a></li>
+      </ul>
+      <ul class="user-options">
+        <li>
+          <a href="/login">Log in <i class="fas fa-sign-in-alt"></i></a>
+        </li>
+        <li>
+          <a href="/register">Sign up <i class="fas fa-user-plus"></i></a>
+        </li>
+        <li>
+          <div class="search-box-mobile">
             <form action="#" method="POST">
-              <input
-                type="text"
-                name="search"
-                id="search"
-                placeholder="Search for anything"
-              /><button type="" class="button-search">
+              <input type="text" name="search" id="search" placeholder="Search for anything" required /><button type=""
+                class="button-search">
                 <i class="fab fa-searchengin fa-lg"></i>
               </button>
             </form>
           </div>
-          <div class="shoppingCart">
-            <button><i class="fas fa-shopping-cart fa-lg"></i></button>
-          </div>
-        </div>
-        <nav class="header-nav">
-          <ul class="service-options">
-            <li><a href="#">Novedades</a></li>
-            <li><a href="#">Productos destacados</a></li>
-            <li><a href="#">Favoritos</a></li>
-            <li><a href="#">Centro de información</a></li>
-          </ul>
-          <ul class="user-options">
-            <li>
-              <a href="/login">Log in <i class="fas fa-sign-in-alt"></i></a>
-            </li>
-            <li>
-              <a href="/register">Sign up <i class="fas fa-user-plus"></i></a>
-            </li>
-          </ul>
-        </nav>
-        <div class="container-barMenu">
-          <i class="fas fa-bars barMenu fa-lg"></i>
-        </div>
-        <div class="banner">
-          <img src="/images/home/banner1.jpg" alt="banner1" />
-        </div>
-    </header>
+        </li>
+      </ul>
+      <div class="shoppingCart-mobile">
+        <a href="/productCart"><i class="fas fa-shopping-cart fa-lg"></i></a>
+      </div>
+    </nav>
+    <div class="container-barMenu">
+      <i class="fas fa-bars barMenu fa-lg"></i>
+    </div>
+    <div class="banner">
+      <img src="/images/home/banner1.jpg" alt="banner1" />
+    </div>
+  </header>
 
     <main>
         <section class="main-section-product">
