--- a/public/css/productDetailStyles.css
+++ b/public/css/productDetailStyles.css
@@ -49,6 +49,7 @@ body{
 
 
 h1{
+    margin-top: 16px;
     font-size: 24px;
     margin-block-end: 8px;
     background-color: white;
@@ -121,6 +122,8 @@ h1{
 
 
 .title{
+    margin-top: 16px;
+    margin-bottom: 16px;
     font-size: 20px;
     font-weight: 700;
     padding-left: 8px;
@@ -262,18 +265,22 @@ td{
     .mini-product-card{
         width: 31%;
     }  
+    .image-product{
+        max-width: 380px;
+    }
+
+    
+
 }
 
 @media (min-width:769px) {
+    
     .product-card{
         display: flex;
-        justify-content: space-between;    
-        align-items: center;           
-    }
-
-    .image-product{
-        width: 60%;
-    }
+        justify-content: space-around;   
+        align-items: center;  
+        flex-wrap: wrap;         
+    }   
 
     .product-card-2nd-box{
         width: 40%;
