--- a/public/css/register.css
+++ b/public/css/register.css
@@ -3,8 +3,12 @@
     margin:0px;
     padding:0px
 }
-
+  
+  html {
+    position: relative;
+  }
 body{
+    margin-bottom: 500px;
     font-family: 'Roboto', sans-serif;
     font-size: 19px;
     /* background-color:#0E948D33; */
@@ -35,18 +39,18 @@ h3{
 .logo{
     width:70%;
 }
-
+/* 
 header{
     background-color: black;
     /*background-color:#0077b6;
     background-color: #26314d;
     background-color:#005f73;
     background-color: #6182A4;
-    background-color: #39A988;*/
+    background-color: #39A988;
     padding:12px;
-}
+} */
 
-header article{
+/* header article{
     margin-top:10px;
     margin-left:5px;
 }
@@ -133,7 +137,7 @@ header article div.line-first
 
 header div.profile{
     display:none;
-}
+} */
 
 main{
     padding:5%;
@@ -377,6 +381,14 @@ footer ul.navbar{
     margin:10px;}
 
 @media(min-width: 560px){
+
+    .user-options{
+        display: none !important;
+    }
+
+    .service-options{
+        width: 100% !important;
+    }
     .container-barMenu
     {
         display:none;
@@ -405,6 +417,9 @@ footer ul.navbar{
         width:40%;
     }
     
+    body{
+        margin-bottom: 300px;
+    }
     header article{
         display:flex;
         flex-wrap:wrap;
