register's footer and header have been modified

--- a/public/css/register.css
+++ b/public/css/register.css
@@ -4,6 +4,12 @@
     padding:0px
 }
   
+.contactFooterItem{
+    width:90%;
+    font-size: 1rem;
+    
+}
+
   html {
     position: relative;
   }
