--- a/views/register.html
+++ b/views/register.html
@@ -7,54 +7,71 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Oxygen&family=Roboto+Mono&display=swap" rel="stylesheet"/>
     <!-- <link href = "/css/normalize.css" rel = stylesheet> -->
+
+    <link rel="stylesheet" href="/css/home/navbarStyles.css">
+    <link rel="stylesheet" href="/css/home/footerStyles.css">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oxygen&family=Roboto+Mono&display=swap"
+      rel="stylesheet"
+    />
+
     <link href="/css/register.css" rel=stylesheet>
     <script type="text/javascript" src="/js/home.js"></script>
     <title>Crear cuenta</title>
 </head>
 <body>
     <header>
-        <article>
-            <img src="/images/TechLAnd2White.png" alt="logo de la empresa" class="logo">
-            <div class="lines">
-                <div class="line-first"></div>
-                <div class="line-second"></div>
-                <div class="line-third"></div>
-            </div>
-            <div class="input-search">
-                <input type="text" class="search" id="fname" name="fname" placeholder="Buscar..." > 
-                <button class="button-search"><i class="fas fa-search"></i></button>
-            </div>
-        </article>
-
-        <section>
-            <div class="lines">
-                <div class="line-first"></div>
-                <div class="line-second"></div>
-                <div class="line-third"></div>
-            </div>
-            <!-- <article class="circle">
-                <div class="circle-one"><i class="fas fa-circle-notch"></i></div>
-                <div class="circle-second"><i class="fas fa-circle-notch"></i></div>
-                <div class="circle-third"><i class="fas fa-circle-notch"></i></div>
-            </article> -->
-        </section>
-
-        <nav class="header-nav">
-            <ul class="tabs">
-                <li><a href="#" class="firsttab">Novedades</a></li>
-                <li><a href="#" class="secondtab">Productos destacados</a></li>
-                <li><a href="#" class="thirdtab">Favoritos</a></li>
-            </ul>
-            <ul class="user-options">
-                <li><button>Login</button></li>
-                <li><button>Sign Up</button></li>
-            </ul>
-        </nav>
+        <div class="header-top">
+          <div class="container-logo">
+            <a href="/home"><img src="/images/techLand2White.png" class="tech-land-logo" alt="tech-land-logo" /></a>
+          </div>
     
-        <div class="container-barMenu">
-            <i class="fas fa-bars barMenu fa-lg"></i>
+          <div class="search-box">
+            <form action="#" method="POST">
+              <input type="text" name="search" id="search" placeholder="Search for anything" required /><button type=""
+                class="button-search">
+                <i class="fab fa-searchengin fa-lg"></i>
+              </button>
+            </form>
+          </div>
+          <div class="shoppingCart">
+            <a href="/productCart"><i class="fas fa-shopping-cart fa-lg"></i></a>
+          </div>
         </div>
+        <nav class="header-nav">
+          <ul class="service-options">
+            <li><a href="#">Novedades</a></li>
+            <li><a href="#">Productos destacados</a></li>
+            <li><a href="#">Favoritos</a></li>
+            <li><a href="#">Centro de información</a></li>
+          </ul>
+          <ul class="user-options">
+            <li>
+              <a href="/login">Log in <i class="fas fa-sign-in-alt"></i></a>
+            </li>
+            <li>
+              <a href="/register">Sign up <i class="fas fa-user-plus"></i></a>
+            </li>
+            <li>
+              <div class="search-box-mobile">
+                <form action="#" method="POST">
+                  <input type="text" name="search" id="search" placeholder="Search for anything" required /><button type=""
+                    class="button-search">
+                    <i class="fab fa-searchengin fa-lg"></i>
+                  </button>
+                </form>
+              </div>
+            </li>
+          </ul>
+          <div class="shoppingCart-mobile">
+            <a href="/productCart"><i class="fas fa-shopping-cart fa-lg"></i></a>
+          </div>
+        </nav>
+        <div class="container-barMenu">
+          <i class="fas fa-bars barMenu fa-lg"></i>
+        </div>        
     </header>
+
     <main>
         
         <article class="tabs">
@@ -324,27 +341,47 @@
         </section>
     </main>
 
-    <footer>
-        <div class="social-networks">
-        <i class="fab fa-instagram fa-3x"></i>
-        <i class="fab fa-facebook fa-3x"></i>
-        <i class="fab fa-whatsapp fa-3x"></i> 
-        </div>
-        <nav>
-            <ul class="navbar">
-                <li><a href="#">Conócenos</a></li>
-                <li><a href="#">Cuenta</a></li>
-                <li><a href="#">Mi pedido</a></li>
+    <footer class="footerContainer">
+        <section>
+          <article class="footerItem">
+            <h4 class="footerTitle">Follow Us</h4>
+            <ul class="follow-us">
+              <li>
+                <a href="#"><i class="fab fa-facebook fa-2x footer-icon-mobile"></i></a>
+                <a href="#"><span class="nameItemfooter">Facebook: <i class="fab fa-facebook fa-lg"></i></span></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-twitter-square fa-2x footer-icon-mobile"></i></a>
+                <a href="#"><span class="nameItemfooter">Twitter: <i class="fab fa-twitter-square fa-lg"></i></span></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-instagram-square fa-2x footer-icon-mobile"></i></a>
+                <a href="#"><span class="nameItemfooter">Instagram:
+                    <i class="fab fa-instagram-square fa-lg"></i></span></a>
+              </li>
+              <li>
+                <a href="#"><i class="fab fa-github fa-2x footer-icon-mobile"></i></a>
+                <a href="#"><span class="nameItemfooter">Git-Hub: <i class="fab fa-github fa-lg"></i></span></a>
+              </li>
             </ul>
-        
-            <img src="/images/TechLand2White.png" class="logo" alt="logo de la empresa">
-        
-            <ul class="navbar">
-                <li><a href="#">Contáctanos</a></li>
-                <li><a href="#">Servicios</a></li>
-                <li><a href="#">Ayuda e información</a></li>
+          </article>
+    
+          <article class="footerItem">
+            <h4 class="footerTitle">Contact Us</h4>
+            <ul class="contactFooter">
+              <li class="contactFooterItem">Call: +52 55 XX XX XX XX</li>
+              <li class="contactFooterItem">E-mail: something@someadress.com</li>
             </ul>
-        </nav>  
+          </article>
+    
+          <article class="footerItem">
+            <h4 class="footerTitle">Subscribe to the newsletter.</h4>
+            <form class="footerFormMobile" action="#" method="POST">
+              <input type="email" placeholder="something@someadress.com" required />
+              <button type="submit">Subscribe</button>
+            </form>
+          </article>
+        </section>
     </footer>
 </body>
 </html>
