--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -8,10 +8,13 @@
   <link rel="stylesheet" href="/css/home/bodyStyles.css" />
   <link rel="stylesheet" href="/css/home/navbarStyles.css" />
   <link rel="stylesheet" href="/css/home/footerStyles.css" />
+  <link rel="stylesheet" href="/css/home/carruselStyle.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Oxygen&family=Roboto+Mono&display=swap" rel="stylesheet" />
   <script type="text/javascript" src="/js/home.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/4233ea3642.js" crossorigin="anonymous"></script>
   <title>Welcome to "Tech Land"!</title>
 </head>
@@ -67,9 +70,7 @@
     <div class="container-barMenu">
       <i class="fas fa-bars barMenu fa-lg"></i>
     </div>
-    <div class="banner">
-      <img src="/images/home/banner1.jpg" alt="banner1" />
-    </div>
+    <%- include('./partials/carrusel')%>
   </header>
 
   <main class="firstContent">
@@ -228,6 +229,15 @@
       </article>
     </section>
   </footer>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
