--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -115,93 +115,6 @@
       <div class="forget"><a href="#">¿Olvidaste tu contraseña?</a></div>
     </main>
 
-    <footer class="footerContainer">
-      <section>
-        <article class="footerItem">
-          <h4 class="footerTitle">Follow Us</h4>
-          <ul class="follow-us">
-            <li>
-              <a href="#"
-                ><i class="fab fa-facebook fa-2x footer-icon-mobile"></i
-              ></a>
-              <a href="#"
-                ><span class="nameItemfooter"
-                  >Facebook: <i class="fab fa-facebook fa-lg"></i></span
-              ></a>
-            </li>
-            <li>
-              <a href="#"
-                ><i class="fab fa-twitter-square fa-2x footer-icon-mobile"></i
-              ></a>
-              <a href="#"
-                ><span class="nameItemfooter"
-                  >Twitter: <i class="fab fa-twitter-square fa-lg"></i></span
-              ></a>
-            </li>
-            <li>
-              <a href="#"
-                ><i class="fab fa-instagram-square fa-2x footer-icon-mobile"></i
-              ></a>
-              <a href="#"
-                ><span class="nameItemfooter"
-                  >Instagram:
-                  <i class="fab fa-instagram-square fa-lg"></i></span
-              ></a>
-            </li>
-            <li>
-              <a href="#"
-                ><i class="fab fa-github fa-2x footer-icon-mobile"></i
-              ></a>
-              <a href="#"
-                ><span class="nameItemfooter"
-                  >Git-Hub: <i class="fab fa-github fa-lg"></i></span
-              ></a>
-            </li>
-          </ul>
-        </article>
-
-        <article class="footerItem">
-          <h4 class="footerTitle">Contact Us</h4>
-          <ul class="contactFooter">
-            <li class="contactFooterItem">Call: +52 55 XX XX XX XX</li>
-            <li class="contactFooterItem">E-mail: something@someadress.com</li>
-          </ul>
-        </article>
-
-        <article class="footerItem">
-          <h4 class="footerTitle">Subscribe to the newsletter.</h4>
-          <form class="footerFormMobile" action="#" method="POST">
-            <input
-              type="email"
-              placeholder="something@someadress.com"
-              required
-            />
-            <button type="submit">Subscribe</button>
-          </form>
-        </article>
-      </section>
-    </footer>
-    <!-- <footer>
-        <div class="social-networks">
-        <i class="fab fa-instagram fa-3x"></i>
-        <i class="fab fa-facebook fa-3x"></i>
-        <i class="fab fa-whatsapp fa-3x"></i> 
-        </div>
-        <nav>
-            <ul class="navbar">
-                <li><a href="#">Conócenos</a></li>
-                <li><a href="#">Cuenta</a></li>
-                <li><a href="#">Mi pedido</a></li>
-            </ul>
-        
-            <img src="/images/TechLand2White.png" class="logo" alt="logo de la empresa">
-        
-            <ul class="navbar">
-                <li><a href="#">Contáctanos</a></li>
-                <li><a href="#">Servicios</a></li>
-                <li><a href="#">Ayuda e información</a></li>
-            </ul>
-        </nav>  
-    </footer> -->
+    <%- include('./partials/footer')%>
   </body>
 </html>
