--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -10,13 +10,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/4233ea3642.js" crossorigin="anonymous"></script>  
     <link rel="stylesheet" href="/css/home/navbarStyles.css">
-    <link rel="stylesheet" href="/css/home/footerStyles.css">
+    
     <link
       href="https://fonts.googleapis.com/css2?family=Oxygen&family=Roboto+Mono&display=swap"
       rel="stylesheet"
     />
     <script type="text/javascript" src="/js/home.js"></script>  
     <link rel="stylesheet" href="/css/ProductDetailStyles.css">
+    <link rel="stylesheet" href="/css/home/footerStyles.css">
 </head>
 <body>
       <%- include('./partials/header')%>
@@ -220,48 +221,7 @@
       
     </main>
 
-    <footer class="footerContainer">
-        <section>
-          <article class="footerItem">
-            <h4 class="footerTitle">Follow Us</h4>
-            <ul class="follow-us">
-              <li>
-                <a href="#"><i class="fab fa-facebook fa-2x footer-icon-mobile"></i></a>
-                <a href="#"><span class="nameItemfooter">Facebook: <i class="fab fa-facebook fa-lg"></i></span></a>
-              </li>
-              <li>
-                <a href="#"><i class="fab fa-twitter-square fa-2x footer-icon-mobile"></i></a>
-                <a href="#"><span class="nameItemfooter">Twitter: <i class="fab fa-twitter-square fa-lg"></i></span></a>
-              </li>
-              <li>
-                <a href="#"><i class="fab fa-instagram-square fa-2x footer-icon-mobile"></i></a>
-                <a href="#"><span class="nameItemfooter">Instagram:
-                    <i class="fab fa-instagram-square fa-lg"></i></span></a>
-              </li>
-              <li>
-                <a href="#"><i class="fab fa-github fa-2x footer-icon-mobile"></i></a>
-                <a href="#"><span class="nameItemfooter">Git-Hub: <i class="fab fa-github fa-lg"></i></span></a>
-              </li>
-            </ul>
-          </article>
-    
-          <article class="footerItem">
-            <h4 class="footerTitle">Contact Us</h4>
-            <ul class="contactFooter">
-              <li class="contactFooterItem">Call: +52 55 XX XX XX XX</li>
-              <li class="contactFooterItem">E-mail: something@someadress.com</li>
-            </ul>
-          </article>
-    
-          <article class="footerItem">
-            <h4 class="footerTitle">Subscribe to the newsletter.</h4>
-            <form class="footerFormMobile" action="#" method="POST">
-              <input type="email" placeholder="something@someadress.com" required />
-              <button type="submit">Subscribe</button>
-            </form>
-          </article>
-        </section>
-    </footer>
+    <%- include('./partials/footer')%>
     
 </body>
 </html>
