partial file 'head' and partial file 'recommendations' have been created and implemented

--- a/public/css/productDetailStyles.css
+++ b/public/css/productDetailStyles.css
@@ -169,7 +169,8 @@ td{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;    
+    justify-content: space-between; 
+    align-items: baseline;   
 }
 
 .mini-product-card{
