--- a/public/css/productCartStyles.css
+++ b/public/css/productCartStyles.css
@@ -30,13 +30,14 @@ main{
     margin: auto;
 }
 
-.top{
+.top{ 
     padding-bottom: 8px;
     border-bottom: 1px solid #64b3f4;
 }
 
 h1{
-    font-size: 24px;       
+    font-size: 24px;     
+    margin-top: 16px;  
 }
 
 .subtotal{
