--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <%- include("partials/head") %>
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
       rel="stylesheet"
@@ -11,14 +9,10 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap"
       rel="stylesheet"
-    />
-    <link href="/css/normalize.css" rel="stylesheet" />
+    />    
+    <link href="/css/normalize.css" rel="stylesheet" />    
     <link href="/css/register.css" rel="stylesheet" />
-    <link href="/css/loginStyles.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/css/home/footerStyles.css" />
-
-    <link rel="stylesheet" href="/css/home/navbarStyles.css" />
-    <script type="text/javascript" src="/js/home.js"></script>
+    <link href="/css/loginStyles.css" rel="stylesheet" />    
     <title>Iniciar sesión</title>
   </head>
   <body>
