--- a/src/views/productCart.ejs
+++ b/src/views/productCart.ejs
@@ -1,24 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ProductCart</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/4233ea3642.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/css/productDetailStyles.css">
-    <link rel="stylesheet" href="/css/home/navbarStyles.css">
-    <link rel="stylesheet" href="/css/home/footerStyles.css">
-    <link
-      href="https://fonts.googleapis.com/css2?family=Oxygen&family=Roboto+Mono&display=swap"
-      rel="stylesheet"
-    />
-    <script type="text/javascript" src="/js/home.js"></script> 
-    <link rel="stylesheet" href="/css/productCartStyles.css">
-</head>
+    <head>
+        <%- include("partials/head") %>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="/css/productDetailStyles.css">
+        <link rel="stylesheet" href="/css/productCartStyles.css">
+        <title>ProductCart</title>       
+    </head>
+
+
 <body>
     
     <header>
@@ -80,7 +70,7 @@
     <main>
         <section class="top">
             <h1 class="main-title">
-                Tu carrito de compras
+                Mi carrito de compras
             </h1>
     
             <div class="subtotal">
@@ -336,46 +326,8 @@
     
         </section>
     
+        <%- include("partials/recommendations") %>
         
-        <section class="other-products">
-            <h2 class="title">
-                Otros clientes también compraron
-            </h2>
-            <div class="list-of-products">
-                <div class="mini-product-card">
-                    <a href="#">
-                        <img src="/images/gabriel-beaudry-5X5dCf4Pp44-unsplash.jpg" alt="product-picture">
-                        <p class="mini-name">Nombre del producto</p>
-                        <p class="mini-price">$000.00</p>
-                    </a>
-                </div>
-                
-                <div class="mini-product-card">
-                    <a href="#">
-                        <img src="/images/gabriel-beaudry-5X5dCf4Pp44-unsplash.jpg" alt="product-picture">
-                        <p class="mini-name">Nombre del producto</p>
-                        <p class="mini-price">$000.00</p>
-                    </a>
-                </div>
-                    
-                <div class="mini-product-card">
-                    <a href="#">
-                        <img src="/images/gabriel-beaudry-5X5dCf4Pp44-unsplash.jpg" alt="product-picture">
-                            <p class="mini-name">Nombre del producto</p>
-                            <p class="mini-price">$000.00</p>
-                    </a>
-                </div>      
-
-                <div class="mini-product-card">
-                    <a href="#">
-                        <img src="/images/gabriel-beaudry-5X5dCf4Pp44-unsplash.jpg" alt="product-picture">
-                            <p class="mini-name">Nombre del producto</p>
-                            <p class="mini-price">$000.00</p>
-                    </a>
-                </div>      
-                                  
-            </div>
-        </section>
     </main>
     
     <footer class="footerContainer">
