--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -1,22 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width">
+    <%- include("partials/head") %>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Oxygen&family=Roboto+Mono&display=swap" rel="stylesheet"/>
-    <!-- <link href = "/css/normalize.css" rel = stylesheet> -->
-
-    <link rel="stylesheet" href="/css/home/navbarStyles.css">
-    <link rel="stylesheet" href="/css/home/footerStyles.css">
-    <link
-      href="https://fonts.googleapis.com/css2?family=Oxygen&family=Roboto+Mono&display=swap"
-      rel="stylesheet"
-    />
-
-    <link href="/css/register.css" rel=stylesheet>
-    <script type="text/javascript" src="/js/home.js"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">    
+    <!-- <link href = "/css/normalize.css" rel = stylesheet> -->    
+    <link href="/css/register.css" rel=stylesheet>    
     <title>Crear cuenta</title>
 </head>
 <body>
