--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -12,8 +12,10 @@
   
 
 <body>
+  <header>
     <%- include('./partials/header')%>
     <%- include('./partials/carrusel')%>
+  </header>
   
 
   <main class="firstContent">
