--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -117,59 +117,8 @@
 
         <%- include("partials/recommendations") %>
 
-        <section class="reviews">
-            <h2 class="title">
-                Reseñas del producto
-            </h2>
-            <div class="list-of-reviews">
-                <div class="card-review">
-                    <header>
-                        <div class="review-image">
-                            <img src="/images/pexels-pixabay-220453.jpg" alt="profile-picture">
-                         </div>
-                   
-                        <div class="name-date-stars">
-                            <p class="user-name">Nombre de usuario</p>
-                            <p class="date-of-review">31/enero/2045</p>
-                            <div class="stars-review-one-user">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="far fa-star"></i>
-                                <i class="far fa-star"></i>
-                            </div>
-                        </div>
-                    </header>    
-                        <p class="user-review-text">
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos tempora dolorum reiciendis quasi harum, error minus magni corporis, fugiat nulla odio doloribus et architecto maiores doloremque praesentium. Minima, illo minus.
-                        </p>
-                </div>
-
-                <div class="card-review">
-                    <header>
-                        <div class="review-image">
-                            <img src="/images/pexels-pixabay-220453.jpg" alt="profile-picture">
-                         </div>
-                   
-                        <div class="name-date-stars">
-                            <p class="user-name">Nombre de usuario</p>
-                            <p class="date-of-review">31/enero/2045</p>
-                            <div class="stars-review-one-user">
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="fas fa-star"></i>
-                                <i class="far fa-star"></i>
-                                <i class="far fa-star"></i>
-                            </div>
-                        </div>
-                    </header>    
-                        <p class="user-review-text">
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos tempora dolorum reiciendis quasi harum, error minus magni corporis, fugiat nulla odio doloribus et architecto maiores doloremque praesentium. Minima, illo minus.
-                        </p>
-                </div>
-            </div>
-        </section>
-
+        <%- include("partials/reviewsList") %>
+     
       
     </main>
 
