--- a/public/css/productCartStyles.css
+++ b/public/css/productCartStyles.css
@@ -21,8 +21,8 @@ main {
 
 body{    
     font-family: 'Roboto', sans-serif;
-    font-size: 12px;
-    font-weight: 400;
+    /* font-size: 12px;
+    font-weight: 400; */
     color: black;
 }
 main{
