--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -6,6 +6,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400&display=swap" rel="stylesheet">    
     <!-- <link href = "/css/normalize.css" rel = stylesheet> -->    
     <link href="/css/register.css" rel=stylesheet>    
+    <link href="/css/home/formStyles.css" rel=stylesheet> 
     <title>Crear cuenta</title>
 </head>
 <body>
