--- a/public/css/product/productEditForm.css
+++ b/public/css/product/productEditForm.css
@@ -8,6 +8,24 @@
   color: rgb(225, 48, 108);
 }
 
+ul.service-options {
+  background: linear-gradient(
+    237deg,
+    rgba(140, 5, 99, 1) 0%,
+    rgba(225, 48, 108, 1) 50%,
+    rgba(50, 108, 144, 1) 100%
+  ) !important;
+}
+
+ul.service-options li a:hover{
+  background: linear-gradient(
+    237deg,
+    rgba(140, 5, 99, 1) 0%,
+    rgba(225, 48, 108, 1) 50%,
+    rgba(50, 108, 144, 1) 100%
+  ) !important;
+}
+
 body {
   background: linear-gradient(
     237deg,
@@ -176,6 +194,22 @@ form div label {
     );
 
     width: 70%;
+  }
+  
+  ul.service-options {
+    background: linear-gradient(
+      167deg,
+      rgba(192, 148, 233, 0.5) 0%,
+      rgba(247, 248, 250, 0.938) 100%
+    )!important;
+  }
+  
+  ul.service-options li a:hover{
+    background: linear-gradient(
+      167deg,
+      rgba(192, 148, 233, 0.5) 0%,
+      rgba(247, 248, 250, 0.938) 100%
+    ) !important;
   }
 
  
