--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />    
     <link href="/css/normalize.css" rel="stylesheet" />    
-    <link href="/css/register.css" rel="stylesheet" />
+    <link href="/css/home/formStyles.css" rel=stylesheet> 
     <link href="/css/loginStyles.css" rel="stylesheet" />    
     <title>Iniciar sesión</title>
   </head>
