products' JSON has been created and products' CRUD has been started

--- a/src/views/partials/featuredProductsList.ejs
+++ b/src/views/partials/featuredProductsList.ejs
@@ -1,7 +1,7 @@
 <h2 class="titleMain">Productos Destacados:</h2>
     <section class="featuredProducts">
       <% listOfProducts.forEach(product => { %>
-        <a href="/productDetail/<%= product.id %>">
+        <a href="/products/detail/<%= product.id %>">
           <article class="Item">
             <img class="itemImage" src="<%= product.img %>" alt="Core-i9" />
             <div class="specifications">
