--- a/src/views/partials/promotionProductsList.ejs
+++ b/src/views/partials/promotionProductsList.ejs
@@ -1,7 +1,8 @@
+
 <h2 class="titleMain">Productos en Promoción:</h2>
     <section class="promotionalProducts">
       <% promotionProductsList.forEach(product => { %>    
-        <a href="/productDetail/<%=product.id%>">      
+        <a href="/products/detail/<%=product.id%>">      
           <article class="Item">
             <img class="itemImage" src="<%=product.img%>" alt="GabineteNZXT" />
             <div class="specifications">
