Dependencies has been added.
"Multer" was configured, the "override" dependency to overload the forms, the product "update" method was created and tests were carried out.

--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -60,6 +60,8 @@
                             Agregar al carrito
                         </button>
                     </div>
+
+                    <a href="/products/edit/<%= item.id %>"> XXXXXXX</a>
                 </div>
                 
             </main>
