--- a/src/views/products/productEdit.ejs
+++ b/src/views/products/productEdit.ejs
@@ -22,20 +22,20 @@
         <form action="/products/edit/<%= item.id %>?_method=PATCH" method="POST" enctype="multipart/form-data">
           <div class="form-input">
             <label for="name">Nombre del Producto</label>
-            <input type="text" name="name" id="name" required/>
+            <input type="text" name="name" id="name" value="<%=item.name%>" required/>
           </div>
           <div class="form-input">
             <label for="description">Descripción</label>
-            <textarea name="description" id="description" cols="3" required></textarea>
+            <textarea name="description" id="description" cols="3"  required><%=item.description%></textarea>
           </div>
           <div class="form-input">
             <label for="product-image">Imagen del producto</label>
-            <input type="file" name="product-image" id="file" required/>
+            <input type="file" name="product-image" id="file" value="<%=item.img%>" required/>
           </div>
           <div class="form-input">
             <label for="category">Categoría</label>
             <select name="category" id="category" required>
-              <option value=""></option>
+              <option value="<%=item.category%>" selected><%=item.category%></option>
               <option value="Perifericos">Perifericos</option>
               <option value="Equipos de computo">Equipos de computo</option>
               <option value="Laptops">Laptops</option>
@@ -54,7 +54,7 @@
           <div class="form-input">
             <label for="brand">Marca</label>
             <select name="brand" id="brand" required>
-              <option value=""></option>
+              <option value="<%=item.brand%>" selected><%=item.brand%></option>
               <option value="Acer">Acer</option>
               <option value="Adata">Adata</option>
               <option value="AlienWare">AlienWare</option>
@@ -79,7 +79,7 @@
           </div>
           <div class="form-input">
             <label for="price">Precio</label>
-            <input type="number" name="price" id="price" required />
+            <input type="number" name="price" id="price" value="<%=item.price%>" required />
           </div>
           <div class="form-button"> 
             <button type="submit" class="button-form">Editar</button>
