--- a/src/views/partials/recommendations.ejs
+++ b/src/views/partials/recommendations.ejs
@@ -3,7 +3,7 @@
         Otros clientes también compraron
     </h2>
     <div class="list-of-products">
-        <% products.forEach(product => { if(product.featured == true){ %>
+        <% products.forEach(product => { if(product.type == "Destacados"){ %>
         <div class="mini-product-card">
             <a href="/products/detail/<%= product.id %>">
                 <img src="<%= product.img %>" alt="product-picture">
