--- a/src/views/productDetail.ejs
+++ b/src/views/productDetail.ejs
@@ -33,11 +33,11 @@
                     <div class="main-features">                  
                         <div class="icon-main-feature">
                           <i class="fas fa-memory"></i>
-                            <p><%=item.mainFeature1%></p>
+                            <p>A main feature</p>
                         </div>    
                         <div class="icon-main-feature">
                             <i class="fas fa-memory"></i>
-                              <p><%=item.mainFeature2%></p>
+                              <p>A main feature</p>
                         </div>
                         <div class="icon-main-feature">
                           <i class="fas fa-memory"></i>
@@ -48,7 +48,9 @@
                               <p>A main feature</p>
                         </div>
                     </div>
-      
+                
+                    
+                          
                     <div class="price">
                         <label for="price-number">Precio:</label>
                         <p id="price-number">$ <%=item.price%> MX</p>
@@ -61,7 +63,9 @@
                         </button>
                     </div>
 
-                    <a href="/products/edit/<%= item.id %>"> XXXXXXX</a>
+                    <a href="/products/edit/<%= item.id %>">
+                        <button>Editar</button>
+                    </a>
                     <form action="/products/delete/<%= item.id %>?_method=DELETE" method="POST" style="display: inline-flex">
                         <button type="submit" class="action-button delete">ELIMINAR</button>
                     </form>
@@ -82,6 +86,7 @@
             </div>
         </section>
 
+        <% if(item.specifications !== undefined){ %>     
         <section class="specficactions">
             <h2 class="title">
                 Especificaciones técnicas
@@ -95,30 +100,18 @@
                         <th>Característica</th>
                         <th>Descripción</th>
                     </tr>
-
+                    <% item.specifications.forEach(row => {  %>               
                     <tr>
-                        <td>a value</td>
-                        <td>another value</td>
+                        <td><%= row.feature %></td>
+                        <td><%= row.description %></td>
                     </tr>
-                    
-                    <tr>
-                        <td>a value</td>
-                        <td>another value</td>
-                    </tr>
-
-                    <tr>
-                        <td>a value</td>
-                        <td>another value</td>
-                    </tr>
-
-                    <tr>
-                        <td>a value</td>
-                        <td>another value</td>
-                    </tr>
-                  
+                    <% }) %>
                 </table>
             </div>
         </section>
+        <% } %>
+       
+        
 
         <%- include("partials/recommendations") %>
 
