Product cart and product detail moved to the product directory.

--- a/src/views/products/productCart.ejs
+++ b/src/views/products/productCart.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <%- include("partials/head") %>
+        <%- include("../partials/head") %>
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="/css/productDetailStyles.css">
         <link rel="stylesheet" href="/css/productCartStyles.css">
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <%- include('./partials/header')%>
+        <%- include('../partials/header')%>
     </header>
 
 
@@ -274,11 +274,10 @@
     
         </section>
     
-        <%- include("partials/recommendations") %>
         
     </main>
     
-    <%- include('./partials/footer')%>  
+    <%- include('../partials/footer')%>  
     
 </body>
 </html>
