--- a/src/views/products/productDetail.ejs
+++ b/src/views/products/productDetail.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <%- include("partials/head") %>    
+    <%- include("../partials/head") %>    
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/css/productDetailStyles.css">
     <title>Detalle</title>    
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-      <%- include('./partials/header')%>
+      <%- include('../partials/header')%>
   </header>
 
     <main>
@@ -113,14 +113,14 @@
        
         
 
-        <%- include("partials/recommendations") %>
+        <%- include("../partials/recommendations") %>
 
-        <%- include("partials/reviewsList") %>
+        <%- include("../partials/reviewsList") %>
      
       
     </main>
 
-    <%- include('./partials/footer')%>
+    <%- include('../partials/footer')%>
     
 </body>
 </html>
